--- a/jiuxian_APP/css/wangchenyu/wine.css
+++ b/jiuxian_APP/css/wangchenyu/wine.css
@@ -1,3 +1,13 @@
+body,
+button,
+input,
+select,
+textarea {
+    /* for ie */
+    font: 12px/2 Microsoft Yahei, -apple-system, PingFang SC;
+}
+
+
 img {
     width: 100%;
 }
